syntax = "proto3";

package SvRpc.Stream;

message ApplicationMessages
{
	oneof message
	{
		GetThrottledStreamRequest GetThrottledStreamRequest = 1;
		GetThrottledStreamResponse GetThrottledStreamResponse = 2;
	}
}

message GetThrottledStreamRequest
{
	uint32 count = 1;
}
message GetThrottledStreamResponse
{
	uint32 sequence = 1;
}
